# federated_graphql_mock_server

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  lefthook.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml
src/: fetch.rs  lib.rs  main.rs  mock_graph.rs  new_project.rs  scaffold.rs  schema.rs  schema_handler.rs  schema_loader.rs  schema_parser.rs  schema_watcher.rs  server.rs  supergraph_compose.rs  supergraph_config.rs
src/graphql/: schema.graphql  variant_query.graphql
