[package]
name = "federated_graphql_mock_server"
version = "0.3.1"
edition = "2024"
description = "GraphQLserver genrator with mock data"
repository = "https://github.com/jeffutter/federated_graphql_mock_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
sha2 = "0.11.0"
tempfile = "3.10.1"
async-graphql = { git = "https://github.com/jeffutter/async-graphql.git", branch = "allow-dynamic-schema-subtypes", default-features = false, features = ["dynamic-schema", "tracing", "graphiql"] }
# async-graphql = { version = "7.0.16", features = ["dynamic-schema", "tracing"] }
# async-graphql = { path = "../async-graphql/", features = ["dynamic-schema", "tracing"] }
# async-graphql-axum = "7.0.3"
async-graphql-axum = { git = "https://github.com/jeffutter/async-graphql.git", branch = "allow-dynamic-schema-subtypes" }
# async-graphql-axum = { path = "../async-graphql/integrations/axum" }
async-stream = "0.3.6"
axum = "0.8.1"
clap = { version = "4.5.0", features = ["derive", "env", "cargo"] }
fake = "5.1.0"
graphql_client = "0.16.0"
graphql-parser = "0.4.1"
indexmap = "2.8.0"
mimalloc = { version = "0.1.39" }
notify = "8.0.0"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tower-service = "0.3.3"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-forest = { version = "0.3.1", features = ["chrono", "ansi", "tokio", "smallvec"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = "0.3.31"
tokio-util = "0.7.15"
itertools = "0.14.0"
serde = "1.0.219"
nom = "8.0.0"
indicatif = "0.18.4"
serde_yaml = "0.9.34"

[profile.dev]
lto = false
codegen-units = 256
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1

# [patch.crates-io]
# async-graphql = { path = "../async-graphql/" }
